--- a/packages/example-app/src/index.css
+++ b/packages/example-app/src/index.css
@@ -31,6 +31,7 @@
 }
 
 .pf-c-page__main-section .example-heading {
+  margin-top: 50px;
   padding: var(--pf-global--spacer--md) 0;
   margin-bottom: var(--pf-global--spacer--md);
   border-bottom: var(--pf-global--BorderWidth--sm) solid #f8f8f8;
